# multispectral-vision

./: README.md  config.json  environment.yml  inference.py  main.py  multispectral_deeplabv3plus.py  pyproject.toml  requirements.txt  setup.py  spectral_bands.py  train.py
config/: mlflow_config.py
configs/: default.yaml  process.yaml  train.yaml
datasets/: multispectral.py
models/: deeplabv3plus.py  dual_source_deeplabv3.py
multispectral_vision/: __init__.py
multispectral_vision/config/: __init__.py  mlflow_config.py
multispectral_vision/data/: __init__.py
multispectral_vision/experiments/: __init__.py
multispectral_vision/models/: __init__.py  dual_source_deeplabv3.py
multispectral_vision/utils/: __init__.py
scripts/: download_data.py  train_model.py
src/: config.py  metrics.py  spectral_indices.py
tests/: test_config.py  test_dataset.py  test_metrics.py  test_spectral_indices.py
utils/: metrics.py  model_analysis.py  spectral_indices.py  visualization.py
