[tool.poetry]
name = "multispectral-vision"
version = "0.1.0"
description = "Multi-spectral vision processor using DeepLabV3+"
authors = ["OpenHands <openhands@all-hands.dev>"]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.2.0"
torchvision = "^0.17.0"
numpy = "^1.26.0"
pillow = "^10.2.0"
rasterio = "^1.3.9"
pyyaml = "^6.0.1"
tqdm = "^4.66.1"
matplotlib = "^3.8.0"
tensorboard = "^2.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
isort = "^5.13.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100